# docs/swagger.yaml
@@ -336,17 +336,36 @@ definitions:
       updated_at:
         example: "2022-01-01T00:00:00Z"
         type: string
-      user_id:
-        example: 3
-        type: integer
+      user:
+        allOf:
+        - $ref: '#/definitions/response.CommentUserResponse'
         x-order: "2"
+    type: object
+  response.CommentUserResponse:
+    properties:
+      username:
+        example: luigi
+        type: string
+        x-order: "0"
     type: object
   response.FavouriteResponse:
     properties:
+      brand:
+        example: Honda
+        type: string
+        x-order: "1"
       car_id:
         example: 1
         type: integer
         x-order: "0"
+      image_url:
+        example: image url
+        type: string
+        x-order: "3"
+      model:
+        example: Civic
+        type: string
+        x-order: "2"
     type: object
   response.FindReviewResponse:
     properties:
